Deprecate calling registerFeature without the java plugin applied.
registerFeature performs automatic wiring of variants into the java component. However, in some edge
cases it is possible to construct project state to permit a feature to be created without a java
component present. We detect this edge case and depreceate it in order to simplify logic.

Further, we make some updates to the API of JvmFeatureInternal to avoid nullable providers and avoid
needing to juggle between withJavadocJar and getJavadocElementsConfiguration. Now we have a single
maybeRegister method.

--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -104,6 +104,19 @@ These APIs include:
 
 Instead of using these APIs, you should use the alternative methods that take a `ComponentMetadataRule` class or an `Action`.
 
+[[deprecate_register_feature_no_java_plugin]]
+==== Deprecated calling `registerFeature` without the applying Java plugin
+Creating a JVM feature using link:{javadocPath}/org/gradle/api/plugins/JavaPluginExtension.html#registerFeature(java.lang.String,org.gradle.api.Action)[`JavaPluginExtension#registerFeature`] before applying the Java plugin has been deprecated and will become an error in Gradle 10.0.0.
+
+Build logic which creates JVM features should ensure the Java plugin is applied before calling `registerFeature`.
+
+The following bundled Gradle plugins apply the Java plugin implicitly:
+- `java-library`
+- `application`
+- `groovy`
+- `scala`
+- `war`
+
 [[changes_9.1.0]]
 == Upgrading from 9.0.0 and earlier
 
