--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -311,14 +311,15 @@ tasks.register('nestedBuild', GradleBuild) {
 [[toolchain-project-properties]]
 ==== Deprecation of project properties for toolchain configuration
 
-In previous versions of Gradle, you could configure toolchains using [project properties](userguide/build_environment.html#sec:project_properties) on the command line with the `-P` flag.
+In previous versions of Gradle, you could configure toolchains using <<build_environment.adoc#sec:project_properties, project properties>> on the command line with the `-P` flag.
 For example, to enable toolchain auto-detection, you could use `-Porg.gradle.java.installations.auto-detect=false`.
 This behavior is deprecated and will be removed in Gradle 10.0.0.
-Instead, you should specify these settings as [Gradle properties](userguide/build_environment.html#sec:gradle_configuration_properties) using the `-D` flag:
+Instead, you should specify these settings as <<build_environment.adoc#sec:gradle_configuration_properties, Gradle properties>> using the `-D` flag:
 
-```text
+[source,text]
+----
 -Dorg.gradle.java.installations.auto-detect=false
-//```
+----
 
 === Potential breaking changes
 
