--- a/platforms/documentation/docs/src/docs/userguide/reference/best-practices/tags_reference.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/reference/best-practices/tags_reference.adoc
@@ -66,4 +66,4 @@ Here you can find a brief explanation of all the tags used in the best practices
 `#version-catalog` :: Items that explain how to use <<version_catalogs.adoc#version-catalog,version catalogs>> to centralize dependency declarations.
 
 [[tag:wrapper]]
-`#wrapper` :: Items that explain how to use the <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle Wrapper>> to configure and execute builds using a consistent Gradle version across environments.
+`#wrapper` :: Items that explain how to use the <<gradle_wrapper.adoc#gradle_wrapper,Gradle Wrapper>> to configure and execute builds using a consistent Gradle version across environments.
