--- a/platforms/documentation/docs/src/docs/userguide/reference/other-topics/init_scripts.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/reference/other-topics/init_scripts.adoc
@@ -50,7 +50,7 @@ The command line option can appear more than once, each time adding another init
 3. *Put a file called `yourfilename.init.gradle(.kts)`* in the `__$<<directory_layout.adoc#dir:gradle_user_home,GRADLE_USER_HOME>>__/init.d/` directory.
 4. *Put a file called `yourfilename.init.gradle(.kts)`* in the `$<<installation.adoc#sec:linux_macos_users_2,__GRADLE_HOME__>>/init.d/` directory. Entries will be evaluated in alphabetic order.
 +
-This lets you package a custom Gradle distribution containing custom build logic and plugins. You can combine this with the <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle wrapper>> to make custom logic available to all builds in your enterprise.
+This lets you package a custom Gradle distribution containing custom build logic and plugins. You can combine this with the <<gradle_wrapper.adoc#gradle_wrapper,Gradle wrapper>> to make custom logic available to all builds in your enterprise.
 
 If more than one init script is found, they will all be executed in the order specified above.
 
