--- a/platforms/documentation/docs/src/docs/userguide/unused/troubleshooting.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/unused/troubleshooting.adoc
@@ -23,7 +23,7 @@ You can get other tips and search the link:https://discuss.gradle.org/c/help-dis
 
 If you followed the <<installation.adoc#installation,installation instructions>>, and aren’t able to execute your Gradle build, here are some tips that may help.
 
-If you installed Gradle outside of just invoking the <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle Wrapper>>, you can check your Gradle installation by running `gradle --version` in a terminal.
+If you installed Gradle outside of just invoking the <<gradle_wrapper.adoc#gradle_wrapper,Gradle Wrapper>>, you can check your Gradle installation by running `gradle --version` in a terminal.
 
 You should see something like this:
 
