feat: Add FreeBSD support for native toolchains
- Introduce `isFreeBSD()` and `FreeBSD` OS type.
- Update `AbstractGccCompatibleToolChain` to support FreeBSD for `amd64` and `arm64` targets.
- Enhance test suite with FreeBSD-specific tests, ensuring environment independence.
Signed-off-by: guswns1659 <guswns1659@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/platforms/native/native_software.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/platforms/native/native_software.adoc
@@ -848,10 +848,10 @@ The core Gradle tool chains are able to target the following architectures out o
 | Architectures
 
 | GCC
-| x86, x86_64, arm64 (macOS & linux Only)
+| x86, x86_64, arm64 (macOS & linux & freeBSD Only)
 
 | Clang
-| x86, x86_64, arm64 (macOS & linux only)
+| x86, x86_64, arm64 (macOS & linux & freeBSD Only)
 
 | Visual C++
 | x86, x86_64, ia-64
