--- a/platforms/documentation/docs/src/docs/userguide/releases/compatibility.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/compatibility.adoc
@@ -67,7 +67,7 @@ We encourage users to try it out and let us know.
 [[kotlin]]
 == Kotlin
 
-Gradle is tested with Kotlin 2.0.0 through 2.2.20-Beta2.
+Gradle is tested with Kotlin 2.0.0 through 2.2.20-RC.
 Beta and RC versions may or may not work.
 
 .Embedded Kotlin version
